<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".app.DeviseActivity">

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="@string/id"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/editTextIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|textPersonName"
        android:text="@string/ip"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="72dp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|textPersonName"
        android:text="@string/name"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="130dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="197dp"
            android:layout_height="110dp"
            app:srcCompat="@drawable/controller_button_0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="188dp" />

        <Button
            android:id="@+id/buttonChangeImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSelect"
            android:text="@string/select_img"
            tools:layout_editor_absoluteX="223dp"
            tools:layout_editor_absoluteY="250dp" />
    </LinearLayout>

</LinearLayout>