<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".app.ControllerActivity"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/timeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_recent_history" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_compass" />

        <TextView
            android:id="@+id/textViewLighting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/connectStatusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textViewConnectError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connect_error"
            tools:textColor="@android:color/holo_red_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/statusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textViewHasUpdateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/has_update"
            tools:textColor="@android:color/holo_red_light" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onUpdate"
            android:text="@string/update" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageButton android:id="@+id/imageButton0"
            android:layout_column="0"
            android:src="@drawable/aeration_grey"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:scaleType="fitCenter"
            android:onClick="onClick"
            android:tag="channel-0"
            android:background="@android:color/white" />

        <ImageButton android:id="@+id/imageButton1"
            android:layout_column="1"
            android:src="@drawable/filter_gray"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:scaleType="fitCenter"
            android:onClick="onClick"
            android:tag="channel-1"
            android:layout_toRightOf="@+id/imageButton0"
            android:background="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageButton2"
            android:layout_span="1"
            android:src="@drawable/heating_gray"
            android:layout_row="1"
            android:layout_column="0"
            android:scaleType="fitCenter"
            android:onClick="onClick"
            android:tag="channel-2"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_below="@+id/imageButton0"
            android:background="@android:color/white" />

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageButton3"
            android:layout_span="2"
            android:src="@drawable/illumination_gray"
            android:layout_row="1"
            android:layout_column="1"
            android:scaleType="fitCenter"
            android:onClick="onClick"
            android:tag="channel-3"
            android:layout_toRightOf="@+id/imageButton2"
            android:layout_below="@+id/imageButton1"
            android:background="@android:color/white" />
    </LinearLayout>

</LinearLayout>
